--- a/posts/exploring-arlingtons-bikeometer-data/index.ipynb
+++ b/posts/exploring-arlingtons-bikeometer-data/index.ipynb
@@ -1413,11 +1413,12 @@
    "source": [
     "The boxplot of the left clearly shows that on average there are fewer bike trips on the weekend days versus weekdays. However, there are some weekend day outliers that are almost just as high as the weekday extreme usage days. There seems to be a daily maximum capacity for the trail around 1,000 inbound trips. It makes me think some of these extremely high outliers are associated with events.\n",
     "\n",
-    "My next steps will be to explore these extreme outliers, dig further into the temperature, wind and precipitation day. Ultimately, I want to build a model that can predict daily bike trips on this part of the Custis Trail."
+    "My next steps will be to explore these extreme outliers, dig further into the temperature, wind and precipitation data. Ultimately, I want to build a model that can predict daily bike trips on this part of the Custis Trail."
    ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
