--- a/posts/pedestrian-growth-trends-on-arlingtons-trails/index.ipynb
+++ b/posts/pedestrian-growth-trends-on-arlingtons-trails/index.ipynb
@@ -6,9 +6,9 @@
     "collapsed": true
    },
    "source": [
-    "Building off my previous work on [Arlington Bikeometer data](https://georgetsilva.github.io/posts/exploring-arlingtons-bikeometer-data/) and [mapping points with Folium](https://georgetsilva.github.io/posts/mapping-points-with-folium/), I decided to contribute something to the upcoming [Walk Hack Night II](https://www.meetup.com/Transportation-Techies/events/236668724/). While I'm not able to attend this event, I still wanted to be able to add to the discussion with some data visualizations about local walking trends.<!-- TEASER_END -->\n",
+    "Building off my previous work on [Arlington's Bikeometer data](https://georgetsilva.github.io/posts/exploring-arlingtons-bikeometer-data/) and [mapping points with Folium](https://georgetsilva.github.io/posts/mapping-points-with-folium/), I decided to contribute something to the upcoming [Walk Hack Night II](https://www.meetup.com/Transportation-Techies/events/236668724/). While I'm not able to attend this event, I still want to contribute to the discussion with some data visualizations about local walking trends.<!-- TEASER_END -->\n",
     "\n",
-    "Many of the Eco-Counter installed on Arlington's trails can count both bicycle and pedestrian traffic. I decided to look through the various counter and find ones that had data for the past three years. My plan was then to calculate annual average daily traffic for the pedestrian traffic at each counter and then map the annualized growth rate for that metric for each location.\n",
+    "Many of the Eco-Counters installed on Arlington's trails can count both bicycle and pedestrian traffic. I decided to look through the various counters and find ones that had data for the past three years. My plan was then to calculate annual average daily traffic for the pedestrian traffic at each counter, and then map the annualized growth rate for that metric for each location.\n",
     "\n",
     "I used the following Python modules for this project."
    ]
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then I grabbed the counter ID numbers for the eleven stations that provided consistent data from January 1, 2014 to December 31, 2016.  Those counter IDs are listed below. When I browsed the data, I discovered some very large pedestrian counts that were obvious outliers.  Those outliers were probably the result of sensor errors. Upon further investigation, I noticed some of these outliers occurred during the evening hours, which should actually have pedestrian counts close to zero. Something strange seems to happen to these counters at night on occassion."
+    "Then I grabbed the counter ID numbers for the eleven stations that provided consistent data from January 1, 2014 to December 31, 2016.  Those counter IDs are listed below. When I browsed the data, I discovered some very large pedestrian counts that were obvious outliers.  Those outliers were probably the result of sensor errors. Upon further investigation, I noticed some of these outliers occurred during the evening hours, which should actually have pedestrian counts close to zero. Something strange seems to happen to these counters at night on occasion."
    ]
   },
   {
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The code below fetches the daily pedestrian count data for each counter in the list above in an xml format. I dealt with outliers by dropping above the 95th percentile and the zeroes. I then summed the inbound and outbound pedestrian counts by day. I then calculated the average daily counts for the remaining data by month and then I calculated the yearly means based on those monthly averages.  Finally, I obtained the annualize rate of growth for the average annual daily pedestrian traffic numbers.  These statistics are reported below the following Python code."
+    "The code below fetches the daily pedestrian count data for each counter in the list above. I dealt with outliers by dropping count data above the 95th percentile and any zero counts. I then summed the inbound and outbound pedestrian counts by day. With those daily sums, I calculated the average daily counts for the remaining data by month and then I calculated the yearly means based on those monthly averages.  Finally, I obtained the annualize rate of growth for the average annual daily pedestrian traffic numbers. These statistics are reported below the following Python code."
    ]
   },
   {
@@ -770,18 +770,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can click on each circle above to get the location name and the growth rate for that point.  My quick take is that there has been an increase in walkers on the Custis Trail.  Over the same time period the Columbia Pike and Mount Vernon points indicate decreases in pedestrian traffic counts. Planners may want to really focus on the conditions at the MVT Airport South counter to see if there needs to be any improvements for pedestrians in that area.\n",
+    "You can click on each circle above to get the location name and the growth rate for that point.  My quick take is that there has been an increase in walkers on the Custis Trail.  Over the same time period, the Columbia Pike and Mount Vernon points indicate decreases in pedestrian traffic counts. Planners may want to really focus on the conditions at the MVT Airport South counter to see if there needs to be any improvements for pedestrians in that area.\n",
     "\n",
     "Please share your thoughts and ideas in the comment section below."
    ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
-   "env": {},
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   },
   "nikola": {
    "category": "",
